--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,74 @@
-.App {
-  text-align: center;
+
+/* App.css */
+
+
+.flex-container {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  background-image: url("psychologist-image.jpg");
+}
+.main{
+  background-color: white;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.header {
+  display: flex;
+  align-items: flex-end;
+  
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+ul {
+  list-style-type: none;
+  display: flex;
+  justify-content: space-evenly;
+  flex: 1;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+a {
+  display: inline-block;
+  padding: 10px 20px;
+  font-family: Arial, sans-serif;
+  font-size: 16px;
+  font-weight: bold;
+  text-decoration: none;
+  color: #000000;
+  background-color: #c6e1ff6e;
+  border: 2px solid #000000;
+  border-radius: 5px;
+  transition: background-color 0.3s, border-color 0.3s, color 0.3s;
+}
+
+.main-text {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.ingrid {
+  display: flex;
+}
+
+.logo-image {
+  flex: 1;
+  max-height: 150px;
+  max-width: 150px;
+}
+
+.paragraph {
+  font-family: Arial, sans-serif; /* Choose a professional and easily readable font */
+  font-size: 16px; /* Adjust font size as needed */
+  line-height: 1.5; /* Ensure adequate line spacing for readability */
+  color: #333; /* Choose a dark color for the text */
+  margin-bottom: 20px; /* Provide some spacing between paragraphs */
+  max-width: 400px;
+}
+
+.footer {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+strong {
+  font-weight: bold;
 }
