--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,18 +1,19 @@
 
 /* App.css */
 
-
+/*  background-image: url("../Images/psychologist-image.jpg");
+*/
 body {
   height: 100%;
   display: flex;
   justify-content: center;
   flex-direction: column;
-  background-image: url("../Images/psychologist-image.jpg");
 }
 
-.header {
-  display: flex;
-  align-items: flex-end;
+h1 {
+  margin: 0;
+  font-size: 3vw;
+  color: rgb(170, 45, 45);
 }
 
 .main{
@@ -27,22 +28,13 @@ body {
   flex-wrap: wrap;
 }
 
-
-
-.bigtext {
-  margin: 50px;
-  display:flex;
-  flex-direction: column;
-  align-items: center;
+.bigimage {
+  max-height: 20vw;
 }
 
-ul {
-  list-style-type: none;
-  display: flex;
-  justify-content: space-evenly;
-  flex: 1;
-  flex-wrap: wrap;
-}
+
+/*background-image: url("../Images/leaves.jpg");*/
+
 
 .rubrik {
   display: flex;
@@ -62,21 +54,16 @@ a {
   font-weight: bold;
   text-decoration: none;
   color: #000000;
-  background-color: #c6e1ff6e;
+  background-color: #d445777d;
   border: 2px solid #000000;
   border-radius: 5px;
   transition: background-color 0.3s, border-color 0.3s, color 0.3s;
 }
 
+
 h2 {
   margin: 0;
   font-size: 4vw;
-}
-
-.logo-image {
-  flex: 1;
-  max-height: 150px;
-  max-width: 150px;
 }
 
 .paragraph {
