--- a/src/css/header.css
+++ b/src/css/header.css
@@ -3,14 +3,18 @@
     align-items: center;
     width: 100%;
   }
-.subheader {
+.links {
     display:flex;
     align-items: center;
     flex-direction: column;
-    padding-left: 10vw;
-}
+    width: 100%;
+  }
 
-.logo-image {
+  h1 {
+    font-size: 25.5px;
+  }
+  
+  .logo-image {
     max-height: 150px;
     max-width: 150px;
   }
@@ -18,21 +22,71 @@
   ul {
     list-style-type: none;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
     flex: 1;
     flex-wrap: wrap;
     padding-inline-start: 0;
   }
 
-  .logotext {
+  .logo {
     display:flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
-    
+    padding-left: 15%;
+  }
+
+  .logotext {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
   }
 
   .navline{
     min-width: 100vw;
     padding-block: 2px;
     background: #aa2e2d;
+  }
+
+  a {
+    display: inline-block;
+    padding: 8px 16px;
+    font-size: 21.5px;
+    font-weight: bold;
+    text-decoration: none;
+    color: #000000;
+  }
+  a:hover {
+    color: #aa2e2d;
+  }
+  
+  @media only screen and (max-width: 850px){
+    .header{
+      flex-direction: column;
+    }
+    .logo {
+      display:flex;
+      flex-direction: column;
+      align-items: center;
+      padding-left: 0;
+    }
+    .logo-image{
+      width: 15vw;
+    }
+    .logotext {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+    h1 {
+      font-size: 3vw;
+    }
+    
+    a {
+      font-size: 2.5vw;
+    }
+    ul {
+      margin-block-start: 0;
+      margin-block-end: 0;
+    }
+
   }
