--- a/src/css/App.css
+++ b/src/css/App.css
@@ -22,12 +22,7 @@ h1 {
   flex: 1 0 auto; 
 }
 
-.main-text {
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  flex-wrap: wrap;
-}
+
 
 /*background-image: url("../Images/leaves.jpg");*/
 
@@ -50,11 +45,12 @@ h2 {
 }
 
 .paragraph {
-  font-size: 2vw; /* Adjust font size as needed */
+  font-size: calc(8px + 1vw); /* Adjust font size as needed */
   line-height: 1.5; /* Ensure adequate line spacing for readability */
   color: #333; /* Choose a dark color for the text */
   margin-bottom: 20px; /* Provide some spacing between paragraphs */
   max-width: 500px;
+  
 }
 
 
@@ -71,8 +67,5 @@ strong {
   }
   h2 {
     font-size: 34px;
-  }
-  a{
-    font-size: 25.5px;
   }
 }
