--- a/src/css/home.css
+++ b/src/css/home.css
@@ -14,7 +14,19 @@
     max-height: 18vw;
   }
 
+  .main-text {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-wrap: wrap;
+    margin-left: 10vw;
+    margin-right: 10vw;
+  }
+
 .offer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     border: 2px solid rgba(128, 128, 128, 0.1);
     padding: 10px;
     margin: 10px;
@@ -27,13 +39,14 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    padding-right: 40vw;
+    padding-right: 27vw;
+    padding-bottom: 50px;
 }
 
 .offers-p{
-    display: flex;
-    align-items: center;
-    width: 150px;
+    text-align: center;
+    font-size: 17px;
+    width: 200px;
 }
 
 @media only screen and (max-width: 850px){
@@ -42,10 +55,16 @@
         flex-direction: row;
         justify-content: space-evenly;
         padding-right: 0vw;
+        
 
     }
     .offers > p {
         padding-left: 0px;
         padding-right: 0px;
+    }
+    .offers-p{
+        font-size: calc(8px + 1vw);
+        width: 100%;
+        max-width: 200px;
     }
 }
