--- a/src/css/erbjudanden.css
+++ b/src/css/erbjudanden.css
@@ -25,3 +25,14 @@
     text-align: center;
     width: 200px;
 }
+
+.terapiformer{
+    display: flex;
+    justify-content: space-around;
+    margin-top: 50px;
+}
+.form{
+    display: flex;
+    flex-direction: column;
+    max-width: 25vw;
+}
