--- a/src/css/erbjudanden.css
+++ b/src/css/erbjudanden.css
@@ -36,3 +36,17 @@
     flex-direction: column;
     max-width: 25vw;
 }
+
+@media only screen and (max-width: 1250px){
+    .terapiformer{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-top: 50px;
+    }
+    .form{
+        display: flex;
+        flex-direction: column;
+        max-width: 60vw;
+    }
+}
