--- a/src/css/home.css
+++ b/src/css/home.css
@@ -39,7 +39,6 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    padding-right: 27vw;
     padding-bottom: 50px;
 }
 
@@ -55,16 +54,24 @@
         flex-direction: row;
         justify-content: space-evenly;
         padding-right: 0vw;
-        
-
+    
     }
     .offers > p {
         padding-left: 0px;
         padding-right: 0px;
     }
+    .offers > a {
+        padding: 0px;
+    }
     .offers-p{
         font-size: calc(8px + 1vw);
         width: 100%;
         max-width: 200px;
+    }
+}
+@media only screen and (max-width: 500px){
+    .offers {
+        flex-direction: column;
+    
     }
 }
