--- a/src/css/erbjudanden.css
+++ b/src/css/erbjudanden.css
@@ -28,7 +28,7 @@
 
 .terapiformer{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     margin-top: 50px;
 }
 .form{
@@ -38,6 +38,9 @@
 }
 
 @media only screen and (max-width: 1250px){
+    p{
+        font-size: calc(4px + 1vw);
+    }
     .terapiformer{
         display: flex;
         flex-direction: column;
@@ -47,6 +50,12 @@
     .form{
         display: flex;
         flex-direction: column;
+        max-width: 60vw;
+    }
+}
+@media only screen and (max-width: 1000px){
+    .form{
+
         max-width: 60vw;
     }
 }
